Adding updated HTML code and JS code that diplays the current weather and the next 5 days

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             <div id="city">City</div>
             <div id="currentDate">Date</div>
         </header>
+        <img src="" alt="Image of the weather discription" id="currentIcon">
         <div id="currentTemp">Temperature</div>
         <div id="currentDisc">discription</div>
         <div id="currentWind">Wind</div>
@@ -48,6 +49,7 @@
     <section class="row">
         <div id="date1">Date</div>
         <div id="temperature1"></div>
+        <img src="" alt="Image of the weather discription" id="currentIcon">
         <div id="discription1">discription</div>
         <div id="wind1">Wind</div>
         <div id="humidity1">Humidity</div>
@@ -56,6 +58,7 @@
     <section class="row">
         <div id="date2">Date</div>
         <div id="temperature2"></div>
+        <img src="" alt="Image of the weather discription" id="currentIcon">
         <div id="discription2">discription</div>
         <div id="wind2">Wind</div>
         <div id="humidity2">Humidity</div>
@@ -64,6 +67,7 @@
     <section class="row">
         <div id="date3">Date</div>
         <div id="temperature3"></div>
+        <img src="" alt="Image of the weather discription" id="currentIcon">
         <div id="discription3">discription</div>
         <div id="wind3">Wind</div>
         <div id="humidity3">Humidity</div>
@@ -72,6 +76,7 @@
     <section class="row">
         <div id="date4">Date</div>
         <div id="temperature4"></div>
+        <img src="" alt="Image of the weather discription" id="currentIcon">
         <div id="discription4">discription</div>
         <div id="wind4">Wind</div>
         <div id="humidity4">Humidity</div>
@@ -80,9 +85,10 @@
     <section class="row">
         <div id="date5">Date</div>
         <div id="temperature5"></div>
+        <img src="" alt="Image of the weather discription" id="currentIcon">
         <div id="discription5">discription</div>
         <div id="wind5">Wind</div>
-        <div id="humidity55">Humidity</div>
+        <div id="humidity5">Humidity</div>
     </section>
 </div>
 
@@ -94,3 +100,4 @@
     <script src="./assets/script.js"></script>
 </body>
 </html>
+
