Adding code that stores the users selection of cities

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <title>Document</title>
 </head>
 <body>
-  <header class="header">
+  <header class="hero">
     <h1>Weather Report</h1>
   </header>
 
   <main>
-    <div class = card>
+    <div >
         <h3>Which City Are You Looking For?</h3>
 
         <form id = "user-input">
@@ -27,7 +27,7 @@
             <button type="submit" class="btn">Search</button>
         </form>
 
-        <div class="search-history">Previous Search</div>
+        <span class="search-history">Previous Search</span>
 
     </div>
 
