Adding updated CSS and Javascript that will popukate a button from the users prevoius searches

--- a/index.html
+++ b/index.html
@@ -28,13 +28,11 @@
               </form>
             </div>
             <h2 class="subtitle">
-                Search History: <span id="search-history"></span>
+                Search History: 
             </h2>
-            <div id="history-container" class="list-group"></div>
-            <div>
-              <span id="previous-search"></span>
-              <ul id="previous-container"></ul>
-            </div>
+            <div id="search-history"></div>
+
+           
           </div>
         <div class="all-cards" id="weather-cards">
         <div class="main-card">
